--- a/render.yaml
+++ b/render.yaml
@@ -4,4 +4,7 @@ services:
     buildCommand: npm install
     startCommand: node main.js
     envVars:
-      TOKEN: "ODI3ODc0MjAwMzk0OTI0MDgy.YGhX7g.4tBhpWUd7Gy-h8TvDOMY-C9UbYQ"
+      - key: DISCORD_TOKEN
+        scope: instance
+        from: secret
+        name: DISCORD_TOKEN
